Fix bio section on mobile

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -334,7 +334,8 @@ header {
         position: absolute;
         width: 100%;
         bottom: 0;
-        height: 10em;
+        height: 13em;
+        @media (min-width: @screen-sm) { height: 10em; }
         background-color: rgba(0, 0, 0, 0.4);
         white-space: nowrap;
         & > div {
